// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefixFunction returns null literal if testPrefixer returns undefined 1`] = `
Object {
  "async": true,
  "body": Object {
    "body": Array [
      Object {
        "declarations": Array [
          Object {
            "id": Object {
              "loc": undefined,
              "name": "testFn",
              "type": "Identifier",
            },
            "init": Object {
              "async": true,
              "body": Object {
                "body": Array [
                  Object {
                    "declarations": Array [
                      Object {
                        "id": Object {
                          "loc": undefined,
                          "name": "context",
                          "type": "Identifier",
                        },
                        "init": Object {
                          "loc": undefined,
                          "properties": Array [
                            Object {
                              "computed": false,
                              "key": Object {
                                "loc": undefined,
                                "name": "id",
                                "type": "Identifier",
                              },
                              "loc": undefined,
                              "shorthand": false,
                              "type": "ObjectProperty",
                              "value": Object {
                                "type": "StringLiteral",
                                "value": "title--key",
                              },
                            },
                            Object {
                              "computed": false,
                              "key": Object {
                                "loc": undefined,
                                "name": "title",
                                "type": "Identifier",
                              },
                              "loc": undefined,
                              "shorthand": false,
                              "type": "ObjectProperty",
                              "value": Object {
                                "type": "StringLiteral",
                                "value": "title",
                              },
                            },
                            Object {
                              "computed": false,
                              "key": Object {
                                "loc": undefined,
                                "name": "name",
                                "type": "Identifier",
                              },
                              "loc": undefined,
                              "shorthand": false,
                              "type": "ObjectProperty",
                              "value": Object {
                                "type": "StringLiteral",
                                "value": "Key",
                              },
                            },
                          ],
                          "type": "ObjectExpression",
                        },
                        "loc": undefined,
                        "type": "VariableDeclarator",
                      },
                    ],
                    "kind": "const",
                    "loc": undefined,
                    "type": "VariableDeclaration",
                  },
                  Object {
                    "expression": Object {
                      "arguments": Array [
                        Object {
                          "extra": Object {
                            "raw": "'pageerror'",
                            "rawValue": "pageerror",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "pageerror",
                        },
                        Object {
                          "async": false,
                          "body": Object {
                            "body": Array [
                              Object {
                                "expression": Object {
                                  "arguments": Array [
                                    Object {
                                      "async": false,
                                      "body": Object {
                                        "arguments": Array [
                                          Object {
                                            "loc": undefined,
                                            "name": "id",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "loc": undefined,
                                            "name": "err",
                                            "type": "Identifier",
                                          },
                                        ],
                                        "callee": Object {
                                          "loc": undefined,
                                          "name": "__throwError",
                                          "type": "Identifier",
                                        },
                                        "loc": undefined,
                                        "type": "CallExpression",
                                      },
                                      "generator": false,
                                      "loc": undefined,
                                      "params": Array [
                                        Object {
                                          "loc": undefined,
                                          "properties": Array [
                                            Object {
                                              "computed": false,
                                              "extra": Object {
                                                "shorthand": true,
                                              },
                                              "key": Object {
                                                "loc": undefined,
                                                "name": "id",
                                                "type": "Identifier",
                                              },
                                              "loc": undefined,
                                              "shorthand": true,
                                              "type": "ObjectProperty",
                                              "value": Object {
                                                "extra": Object {},
                                                "loc": undefined,
                                                "name": "id",
                                                "type": "Identifier",
                                              },
                                            },
                                            Object {
                                              "computed": false,
                                              "extra": Object {
                                                "shorthand": true,
                                              },
                                              "key": Object {
                                                "loc": undefined,
                                                "name": "err",
                                                "type": "Identifier",
                                              },
                                              "loc": undefined,
                                              "shorthand": true,
                                              "type": "ObjectProperty",
                                              "value": Object {
                                                "extra": Object {},
                                                "loc": undefined,
                                                "name": "err",
                                                "type": "Identifier",
                                              },
                                            },
                                          ],
                                          "type": "ObjectPattern",
                                        },
                                      ],
                                      "type": "ArrowFunctionExpression",
                                    },
                                    Object {
                                      "loc": undefined,
                                      "properties": Array [
                                        Object {
                                          "computed": false,
                                          "key": Object {
                                            "loc": undefined,
                                            "name": "id",
                                            "type": "Identifier",
                                          },
                                          "loc": undefined,
                                          "shorthand": false,
                                          "type": "ObjectProperty",
                                          "value": Object {
                                            "type": "StringLiteral",
                                            "value": "title--key",
                                          },
                                        },
                                        Object {
                                          "computed": false,
                                          "key": Object {
                                            "loc": undefined,
                                            "name": "err",
                                            "type": "Identifier",
                                          },
                                          "loc": undefined,
                                          "shorthand": false,
                                          "type": "ObjectProperty",
                                          "value": Object {
                                            "computed": false,
                                            "loc": undefined,
                                            "object": Object {
                                              "loc": undefined,
                                              "name": "err",
                                              "type": "Identifier",
                                            },
                                            "property": Object {
                                              "loc": undefined,
                                              "name": "message",
                                              "type": "Identifier",
                                            },
                                            "type": "MemberExpression",
                                          },
                                        },
                                      ],
                                      "type": "ObjectExpression",
                                    },
                                  ],
                                  "callee": Object {
                                    "computed": false,
                                    "loc": undefined,
                                    "object": Object {
                                      "loc": undefined,
                                      "name": "page",
                                      "type": "Identifier",
                                    },
                                    "property": Object {
                                      "loc": undefined,
                                      "name": "evaluate",
                                      "type": "Identifier",
                                    },
                                    "type": "MemberExpression",
                                  },
                                  "loc": undefined,
                                  "type": "CallExpression",
                                },
                                "loc": undefined,
                                "type": "ExpressionStatement",
                              },
                            ],
                            "directives": Array [],
                            "loc": undefined,
                            "type": "BlockStatement",
                          },
                          "generator": false,
                          "loc": undefined,
                          "params": Array [
                            Object {
                              "loc": undefined,
                              "name": "err",
                              "type": "Identifier",
                            },
                          ],
                          "type": "ArrowFunctionExpression",
                        },
                      ],
                      "callee": Object {
                        "computed": false,
                        "loc": undefined,
                        "object": Object {
                          "loc": undefined,
                          "name": "page",
                          "type": "Identifier",
                        },
                        "property": Object {
                          "loc": undefined,
                          "name": "on",
                          "type": "Identifier",
                        },
                        "type": "MemberExpression",
                      },
                      "loc": undefined,
                      "type": "CallExpression",
                    },
                    "loc": undefined,
                    "type": "ExpressionStatement",
                  },
                  Object {
                    "alternate": null,
                    "consequent": Object {
                      "body": Array [
                        Object {
                          "expression": Object {
                            "argument": Object {
                              "arguments": Array [
                                Object {
                                  "loc": undefined,
                                  "name": "page",
                                  "type": "Identifier",
                                },
                                Object {
                                  "loc": undefined,
                                  "name": "context",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "computed": false,
                                "loc": undefined,
                                "object": Object {
                                  "loc": undefined,
                                  "name": "globalThis",
                                  "type": "Identifier",
                                },
                                "property": Object {
                                  "loc": undefined,
                                  "name": "__sbPreRender",
                                  "type": "Identifier",
                                },
                                "type": "MemberExpression",
                              },
                              "loc": undefined,
                              "type": "CallExpression",
                            },
                            "loc": undefined,
                            "type": "AwaitExpression",
                          },
                          "loc": undefined,
                          "type": "ExpressionStatement",
                        },
                      ],
                      "directives": Array [],
                      "loc": undefined,
                      "type": "BlockStatement",
                    },
                    "loc": undefined,
                    "test": Object {
                      "computed": false,
                      "loc": undefined,
                      "object": Object {
                        "loc": undefined,
                        "name": "globalThis",
                        "type": "Identifier",
                      },
                      "property": Object {
                        "loc": undefined,
                        "name": "__sbPreRender",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "type": "IfStatement",
                  },
                  Object {
                    "declarations": Array [
                      Object {
                        "id": Object {
                          "loc": undefined,
                          "name": "result",
                          "type": "Identifier",
                        },
                        "init": Object {
                          "argument": Object {
                            "arguments": Array [
                              Object {
                                "async": false,
                                "body": Object {
                                  "arguments": Array [
                                    Object {
                                      "loc": undefined,
                                      "name": "id",
                                      "type": "Identifier",
                                    },
                                    Object {
                                      "loc": undefined,
                                      "name": "hasPlayFn",
                                      "type": "Identifier",
                                    },
                                  ],
                                  "callee": Object {
                                    "loc": undefined,
                                    "name": "__test",
                                    "type": "Identifier",
                                  },
                                  "loc": undefined,
                                  "type": "CallExpression",
                                },
                                "generator": false,
                                "loc": undefined,
                                "params": Array [
                                  Object {
                                    "loc": undefined,
                                    "properties": Array [
                                      Object {
                                        "computed": false,
                                        "extra": Object {
                                          "shorthand": true,
                                        },
                                        "key": Object {
                                          "loc": undefined,
                                          "name": "id",
                                          "type": "Identifier",
                                        },
                                        "loc": undefined,
                                        "shorthand": true,
                                        "type": "ObjectProperty",
                                        "value": Object {
                                          "extra": Object {},
                                          "loc": undefined,
                                          "name": "id",
                                          "type": "Identifier",
                                        },
                                      },
                                      Object {
                                        "computed": false,
                                        "extra": Object {
                                          "shorthand": true,
                                        },
                                        "key": Object {
                                          "loc": undefined,
                                          "name": "hasPlayFn",
                                          "type": "Identifier",
                                        },
                                        "loc": undefined,
                                        "shorthand": true,
                                        "type": "ObjectProperty",
                                        "value": Object {
                                          "extra": Object {},
                                          "loc": undefined,
                                          "name": "hasPlayFn",
                                          "type": "Identifier",
                                        },
                                      },
                                    ],
                                    "type": "ObjectPattern",
                                  },
                                ],
                                "type": "ArrowFunctionExpression",
                              },
                              Object {
                                "extra": Object {
                                  "trailingComma": 618,
                                },
                                "loc": undefined,
                                "properties": Array [
                                  Object {
                                    "computed": false,
                                    "key": Object {
                                      "loc": undefined,
                                      "name": "id",
                                      "type": "Identifier",
                                    },
                                    "loc": undefined,
                                    "shorthand": false,
                                    "type": "ObjectProperty",
                                    "value": Object {
                                      "type": "StringLiteral",
                                      "value": "title--key",
                                    },
                                  },
                                ],
                                "type": "ObjectExpression",
                              },
                            ],
                            "callee": Object {
                              "computed": false,
                              "loc": undefined,
                              "object": Object {
                                "loc": undefined,
                                "name": "page",
                                "type": "Identifier",
                              },
                              "property": Object {
                                "loc": undefined,
                                "name": "evaluate",
                                "type": "Identifier",
                              },
                              "type": "MemberExpression",
                            },
                            "loc": undefined,
                            "type": "CallExpression",
                          },
                          "loc": undefined,
                          "type": "AwaitExpression",
                        },
                        "loc": undefined,
                        "type": "VariableDeclarator",
                      },
                    ],
                    "kind": "const",
                    "loc": undefined,
                    "type": "VariableDeclaration",
                  },
                  Object {
                    "alternate": null,
                    "consequent": Object {
                      "body": Array [
                        Object {
                          "expression": Object {
                            "argument": Object {
                              "arguments": Array [
                                Object {
                                  "loc": undefined,
                                  "name": "page",
                                  "type": "Identifier",
                                },
                                Object {
                                  "loc": undefined,
                                  "name": "context",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "computed": false,
                                "loc": undefined,
                                "object": Object {
                                  "loc": undefined,
                                  "name": "globalThis",
                                  "type": "Identifier",
                                },
                                "property": Object {
                                  "loc": undefined,
                                  "name": "__sbPostRender",
                                  "type": "Identifier",
                                },
                                "type": "MemberExpression",
                              },
                              "loc": undefined,
                              "type": "CallExpression",
                            },
                            "loc": undefined,
                            "type": "AwaitExpression",
                          },
                          "loc": undefined,
                          "type": "ExpressionStatement",
                        },
                      ],
                      "directives": Array [],
                      "loc": undefined,
                      "type": "BlockStatement",
                    },
                    "loc": undefined,
                    "test": Object {
                      "computed": false,
                      "loc": undefined,
                      "object": Object {
                        "loc": undefined,
                        "name": "globalThis",
                        "type": "Identifier",
                      },
                      "property": Object {
                        "loc": undefined,
                        "name": "__sbPostRender",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "type": "IfStatement",
                  },
                  Object {
                    "alternate": null,
                    "consequent": Object {
                      "body": Array [
                        Object {
                          "declarations": Array [
                            Object {
                              "id": Object {
                                "loc": undefined,
                                "name": "isCoverageSetupCorrectly",
                                "type": "Identifier",
                              },
                              "init": Object {
                                "argument": Object {
                                  "arguments": Array [
                                    Object {
                                      "async": false,
                                      "body": Object {
                                        "left": Object {
                                          "extra": Object {
                                            "raw": "'__coverage__'",
                                            "rawValue": "__coverage__",
                                          },
                                          "loc": undefined,
                                          "type": "StringLiteral",
                                          "value": "__coverage__",
                                        },
                                        "loc": undefined,
                                        "operator": "in",
                                        "right": Object {
                                          "loc": undefined,
                                          "name": "window",
                                          "type": "Identifier",
                                        },
                                        "type": "BinaryExpression",
                                      },
                                      "generator": false,
                                      "loc": undefined,
                                      "params": Array [],
                                      "type": "ArrowFunctionExpression",
                                    },
                                  ],
                                  "callee": Object {
                                    "computed": false,
                                    "loc": undefined,
                                    "object": Object {
                                      "loc": undefined,
                                      "name": "page",
                                      "type": "Identifier",
                                    },
                                    "property": Object {
                                      "loc": undefined,
                                      "name": "evaluate",
                                      "type": "Identifier",
                                    },
                                    "type": "MemberExpression",
                                  },
                                  "loc": undefined,
                                  "type": "CallExpression",
                                },
                                "loc": undefined,
                                "type": "AwaitExpression",
                              },
                              "loc": undefined,
                              "type": "VariableDeclarator",
                            },
                          ],
                          "kind": "const",
                          "loc": undefined,
                          "type": "VariableDeclaration",
                        },
                        Object {
                          "alternate": null,
                          "consequent": Object {
                            "body": Array [
                              Object {
                                "argument": Object {
                                  "arguments": Array [
                                    Object {
                                      "expressions": Array [],
                                      "loc": undefined,
                                      "quasis": Array [
                                        Object {
                                          "loc": undefined,
                                          "tail": true,
                                          "type": "TemplateElement",
                                          "value": Object {
                                            "cooked": "[Test runner] An error occurred when evaluating code coverage:
The code in this story is not instrumented, which means the coverage setup is likely not correct.
More info: https://github.com/storybookjs/test-runner#setting-up-code-coverage",
                                            "raw": "[Test runner] An error occurred when evaluating code coverage:
The code in this story is not instrumented, which means the coverage setup is likely not correct.
More info: https://github.com/storybookjs/test-runner#setting-up-code-coverage",
                                          },
                                        },
                                      ],
                                      "type": "TemplateLiteral",
                                    },
                                  ],
                                  "callee": Object {
                                    "loc": undefined,
                                    "name": "Error",
                                    "type": "Identifier",
                                  },
                                  "loc": undefined,
                                  "type": "NewExpression",
                                },
                                "loc": undefined,
                                "type": "ThrowStatement",
                              },
                            ],
                            "directives": Array [],
                            "loc": undefined,
                            "type": "BlockStatement",
                          },
                          "loc": undefined,
                          "test": Object {
                            "argument": Object {
                              "loc": undefined,
                              "name": "isCoverageSetupCorrectly",
                              "type": "Identifier",
                            },
                            "loc": undefined,
                            "operator": "!",
                            "prefix": true,
                            "type": "UnaryExpression",
                          },
                          "type": "IfStatement",
                        },
                        Object {
                          "expression": Object {
                            "argument": Object {
                              "arguments": Array [
                                Object {
                                  "loc": undefined,
                                  "name": "page",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "computed": false,
                                "loc": undefined,
                                "object": Object {
                                  "loc": undefined,
                                  "name": "jestPlaywright",
                                  "type": "Identifier",
                                },
                                "property": Object {
                                  "loc": undefined,
                                  "name": "saveCoverage",
                                  "type": "Identifier",
                                },
                                "type": "MemberExpression",
                              },
                              "loc": undefined,
                              "type": "CallExpression",
                            },
                            "loc": undefined,
                            "type": "AwaitExpression",
                          },
                          "loc": undefined,
                          "type": "ExpressionStatement",
                        },
                      ],
                      "directives": Array [],
                      "loc": undefined,
                      "type": "BlockStatement",
                    },
                    "loc": undefined,
                    "test": Object {
                      "computed": false,
                      "loc": undefined,
                      "object": Object {
                        "loc": undefined,
                        "name": "globalThis",
                        "type": "Identifier",
                      },
                      "property": Object {
                        "loc": undefined,
                        "name": "__sbCollectCoverage",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "type": "IfStatement",
                  },
                  Object {
                    "argument": Object {
                      "loc": undefined,
                      "name": "result",
                      "type": "Identifier",
                    },
                    "loc": undefined,
                    "type": "ReturnStatement",
                  },
                ],
                "directives": Array [],
                "loc": undefined,
                "type": "BlockStatement",
              },
              "generator": false,
              "loc": undefined,
              "params": Array [],
              "type": "ArrowFunctionExpression",
            },
            "loc": undefined,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "const",
        "loc": undefined,
        "type": "VariableDeclaration",
      },
      Object {
        "block": Object {
          "body": Array [
            Object {
              "expression": Object {
                "argument": Object {
                  "arguments": Array [],
                  "callee": Object {
                    "loc": undefined,
                    "name": "testFn",
                    "type": "Identifier",
                  },
                  "loc": undefined,
                  "type": "CallExpression",
                },
                "loc": undefined,
                "type": "AwaitExpression",
              },
              "loc": undefined,
              "type": "ExpressionStatement",
            },
          ],
          "directives": Array [],
          "loc": undefined,
          "type": "BlockStatement",
        },
        "finalizer": null,
        "handler": Object {
          "body": Object {
            "body": Array [
              Object {
                "alternate": Object {
                  "body": Array [
                    Object {
                      "argument": Object {
                        "loc": undefined,
                        "name": "err",
                        "type": "Identifier",
                      },
                      "loc": undefined,
                      "type": "ThrowStatement",
                    },
                  ],
                  "directives": Array [],
                  "loc": undefined,
                  "type": "BlockStatement",
                },
                "consequent": Object {
                  "body": Array [
                    Object {
                      "expression": Object {
                        "arguments": Array [
                          Object {
                            "expressions": Array [
                              Object {
                                "type": "StringLiteral",
                                "value": "title",
                              },
                              Object {
                                "type": "StringLiteral",
                                "value": "Key",
                              },
                            ],
                            "loc": undefined,
                            "quasis": Array [
                              Object {
                                "loc": undefined,
                                "tail": false,
                                "type": "TemplateElement",
                                "value": Object {
                                  "cooked": "An error occurred in the following story, most likely because of a navigation: \\"",
                                  "raw": "An error occurred in the following story, most likely because of a navigation: \\"",
                                },
                              },
                              Object {
                                "loc": undefined,
                                "tail": false,
                                "type": "TemplateElement",
                                "value": Object {
                                  "cooked": "/",
                                  "raw": "/",
                                },
                              },
                              Object {
                                "loc": undefined,
                                "tail": true,
                                "type": "TemplateElement",
                                "value": Object {
                                  "cooked": "\\". Retrying...",
                                  "raw": "\\". Retrying...",
                                },
                              },
                            ],
                            "type": "TemplateLiteral",
                          },
                        ],
                        "callee": Object {
                          "computed": false,
                          "loc": undefined,
                          "object": Object {
                            "loc": undefined,
                            "name": "console",
                            "type": "Identifier",
                          },
                          "property": Object {
                            "loc": undefined,
                            "name": "log",
                            "type": "Identifier",
                          },
                          "type": "MemberExpression",
                        },
                        "loc": undefined,
                        "type": "CallExpression",
                      },
                      "loc": undefined,
                      "type": "ExpressionStatement",
                    },
                    Object {
                      "expression": Object {
                        "argument": Object {
                          "arguments": Array [],
                          "callee": Object {
                            "computed": false,
                            "loc": undefined,
                            "object": Object {
                              "loc": undefined,
                              "name": "jestPlaywright",
                              "type": "Identifier",
                            },
                            "property": Object {
                              "loc": undefined,
                              "name": "resetPage",
                              "type": "Identifier",
                            },
                            "type": "MemberExpression",
                          },
                          "loc": undefined,
                          "type": "CallExpression",
                        },
                        "loc": undefined,
                        "type": "AwaitExpression",
                      },
                      "loc": undefined,
                      "type": "ExpressionStatement",
                    },
                    Object {
                      "expression": Object {
                        "argument": Object {
                          "arguments": Array [
                            Object {
                              "computed": false,
                              "loc": undefined,
                              "object": Object {
                                "loc": undefined,
                                "name": "globalThis",
                                "type": "Identifier",
                              },
                              "property": Object {
                                "loc": undefined,
                                "name": "page",
                                "type": "Identifier",
                              },
                              "type": "MemberExpression",
                            },
                            Object {
                              "computed": false,
                              "loc": undefined,
                              "object": Object {
                                "loc": undefined,
                                "name": "globalThis",
                                "type": "Identifier",
                              },
                              "property": Object {
                                "loc": undefined,
                                "name": "context",
                                "type": "Identifier",
                              },
                              "type": "MemberExpression",
                            },
                          ],
                          "callee": Object {
                            "computed": false,
                            "loc": undefined,
                            "object": Object {
                              "loc": undefined,
                              "name": "globalThis",
                              "type": "Identifier",
                            },
                            "property": Object {
                              "loc": undefined,
                              "name": "__sbSetupPage",
                              "type": "Identifier",
                            },
                            "type": "MemberExpression",
                          },
                          "loc": undefined,
                          "type": "CallExpression",
                        },
                        "loc": undefined,
                        "type": "AwaitExpression",
                      },
                      "loc": undefined,
                      "type": "ExpressionStatement",
                    },
                    Object {
                      "expression": Object {
                        "argument": Object {
                          "arguments": Array [],
                          "callee": Object {
                            "loc": undefined,
                            "name": "testFn",
                            "type": "Identifier",
                          },
                          "loc": undefined,
                          "type": "CallExpression",
                        },
                        "loc": undefined,
                        "type": "AwaitExpression",
                      },
                      "loc": undefined,
                      "type": "ExpressionStatement",
                    },
                  ],
                  "directives": Array [],
                  "loc": undefined,
                  "type": "BlockStatement",
                },
                "loc": undefined,
                "test": Object {
                  "arguments": Array [
                    Object {
                      "extra": Object {
                        "raw": "'Execution context was destroyed'",
                        "rawValue": "Execution context was destroyed",
                      },
                      "loc": undefined,
                      "type": "StringLiteral",
                      "value": "Execution context was destroyed",
                    },
                  ],
                  "callee": Object {
                    "computed": false,
                    "loc": undefined,
                    "object": Object {
                      "arguments": Array [],
                      "callee": Object {
                        "computed": false,
                        "loc": undefined,
                        "object": Object {
                          "loc": undefined,
                          "name": "err",
                          "type": "Identifier",
                        },
                        "property": Object {
                          "loc": undefined,
                          "name": "toString",
                          "type": "Identifier",
                        },
                        "type": "MemberExpression",
                      },
                      "loc": undefined,
                      "type": "CallExpression",
                    },
                    "property": Object {
                      "loc": undefined,
                      "name": "includes",
                      "type": "Identifier",
                    },
                    "type": "MemberExpression",
                  },
                  "loc": undefined,
                  "type": "CallExpression",
                },
                "type": "IfStatement",
              },
            ],
            "directives": Array [],
            "loc": undefined,
            "type": "BlockStatement",
          },
          "loc": undefined,
          "param": Object {
            "loc": undefined,
            "name": "err",
            "type": "Identifier",
          },
          "type": "CatchClause",
        },
        "loc": undefined,
        "type": "TryStatement",
      },
    ],
    "directives": Array [],
    "loc": undefined,
    "type": "BlockStatement",
  },
  "generator": false,
  "loc": undefined,
  "params": Array [],
  "type": "ArrowFunctionExpression",
}
`;

exports[`transformCsf calls the beforeEachPrefixer function once 1`] = `
"
      export default {
        title: 'Button',
        parameters: {
          play: {
            steps: [
              { id: 'step1', action: 'click', target: 'button' },
              { id: 'step2', action: 'click', target: 'button' },
            ],
          },
        },
      };

      export const Primary = () => '<button>Primary</button>';
    

if (!require.main) {
  describe(\\"Button\\", () => {
    describe(\\"Primary\\", () => {
      it(\\"smoke-test\\", async () => {
        const testFn = async () => {
          const context = {
            id: \\"button--primary\\",
            title: \\"Button\\",
            name: \\"Primary\\"
          };
          page.on('pageerror', err => {
            page.evaluate(({
              id,
              err
            }) => __throwError(id, err), {
              id: \\"button--primary\\",
              err: err.message
            });
          });
          if (globalThis.__sbPreRender) {
            await globalThis.__sbPreRender(page, context);
          }
          const result = await page.evaluate(({
            id,
            hasPlayFn
          }) => __test(id, hasPlayFn), {
            id: \\"button--primary\\"
          });
          if (globalThis.__sbPostRender) {
            await globalThis.__sbPostRender(page, context);
          }
          if (globalThis.__sbCollectCoverage) {
            const isCoverageSetupCorrectly = await page.evaluate(() => '__coverage__' in window);
            if (!isCoverageSetupCorrectly) {
              throw new Error(\`[Test runner] An error occurred when evaluating code coverage:
  The code in this story is not instrumented, which means the coverage setup is likely not correct.
  More info: https://github.com/storybookjs/test-runner#setting-up-code-coverage\`);
            }
            await jestPlaywright.saveCoverage(page);
          }
          return result;
        };
        try {
          await testFn();
        } catch (err) {
          if (err.toString().includes('Execution context was destroyed')) {
            console.log(\`An error occurred in the following story, most likely because of a navigation: \\"\${\\"Button\\"}/\${\\"Primary\\"}\\". Retrying...\`);
            await jestPlaywright.resetPage();
            await globalThis.__sbSetupPage(globalThis.page, globalThis.context);
            await testFn();
          } else {
            throw err;
          }
        }
      });
    });
  });
}"
`;

exports[`transformCsf calls the testPrefixer function for each test 1`] = `
"
      export default {
        title: 'Button',
        parameters: {
          play: {
            steps: [
              { id: 'step1', action: 'click', target: 'button' },
              { id: 'step2', action: 'click', target: 'button' },
            ],
          },
        },
      };

      export const Primary = () => '<button>Primary</button>';
    

if (!require.main) {
  describe(\\"Button\\", () => {
    describe(\\"Primary\\", () => {
      it(\\"smoke-test\\", async () => {
        const testFn = async () => {
          const context = {
            id: \\"button--primary\\",
            title: \\"Button\\",
            name: \\"Primary\\"
          };
          page.on('pageerror', err => {
            page.evaluate(({
              id,
              err
            }) => __throwError(id, err), {
              id: \\"button--primary\\",
              err: err.message
            });
          });
          if (globalThis.__sbPreRender) {
            await globalThis.__sbPreRender(page, context);
          }
          const result = await page.evaluate(({
            id,
            hasPlayFn
          }) => __test(id, hasPlayFn), {
            id: \\"button--primary\\"
          });
          if (globalThis.__sbPostRender) {
            await globalThis.__sbPostRender(page, context);
          }
          if (globalThis.__sbCollectCoverage) {
            const isCoverageSetupCorrectly = await page.evaluate(() => '__coverage__' in window);
            if (!isCoverageSetupCorrectly) {
              throw new Error(\`[Test runner] An error occurred when evaluating code coverage:
  The code in this story is not instrumented, which means the coverage setup is likely not correct.
  More info: https://github.com/storybookjs/test-runner#setting-up-code-coverage\`);
            }
            await jestPlaywright.saveCoverage(page);
          }
          return result;
        };
        try {
          await testFn();
        } catch (err) {
          if (err.toString().includes('Execution context was destroyed')) {
            console.log(\`An error occurred in the following story, most likely because of a navigation: \\"\${\\"Button\\"}/\${\\"Primary\\"}\\". Retrying...\`);
            await jestPlaywright.resetPage();
            await globalThis.__sbSetupPage(globalThis.page, globalThis.context);
            await testFn();
          } else {
            throw err;
          }
        }
      });
    });
  });
}"
`;

exports[`transformCsf clears the body if clearBody option is true 1`] = `
"
if (!require.main) {
  describe(\\"Button\\", () => {
    describe(\\"Primary\\", () => {
      it(\\"smoke-test\\", async () => {
        const testFn = async () => {
          const context = {
            id: \\"button--primary\\",
            title: \\"Button\\",
            name: \\"Primary\\"
          };
          page.on('pageerror', err => {
            page.evaluate(({
              id,
              err
            }) => __throwError(id, err), {
              id: \\"button--primary\\",
              err: err.message
            });
          });
          if (globalThis.__sbPreRender) {
            await globalThis.__sbPreRender(page, context);
          }
          const result = await page.evaluate(({
            id,
            hasPlayFn
          }) => __test(id, hasPlayFn), {
            id: \\"button--primary\\"
          });
          if (globalThis.__sbPostRender) {
            await globalThis.__sbPostRender(page, context);
          }
          if (globalThis.__sbCollectCoverage) {
            const isCoverageSetupCorrectly = await page.evaluate(() => '__coverage__' in window);
            if (!isCoverageSetupCorrectly) {
              throw new Error(\`[Test runner] An error occurred when evaluating code coverage:
  The code in this story is not instrumented, which means the coverage setup is likely not correct.
  More info: https://github.com/storybookjs/test-runner#setting-up-code-coverage\`);
            }
            await jestPlaywright.saveCoverage(page);
          }
          return result;
        };
        try {
          await testFn();
        } catch (err) {
          if (err.toString().includes('Execution context was destroyed')) {
            console.log(\`An error occurred in the following story, most likely because of a navigation: \\"\${\\"Button\\"}/\${\\"Primary\\"}\\". Retrying...\`);
            await jestPlaywright.resetPage();
            await globalThis.__sbSetupPage(globalThis.page, globalThis.context);
            await testFn();
          } else {
            throw err;
          }
        }
      });
    });
  });
}"
`;

exports[`transformCsf executes beforeEach code before each test 1`] = `
"
    export default {
        title: 'Button',
        parameters: {
          play: {
            steps: [
              { id: 'step1', action: 'click', target: 'button' },
              { id: 'step2', action: 'click', target: 'button' },
            ],
          },
        },
      };

      export const Primary = () => '<button>Primary</button>';
    

if (!require.main) {
  describe(\\"Button\\", () => {
    beforeEach(beforeEach(() => {
      console.log(\\"beforeEach called\\");
    }));
    describe(\\"Primary\\", () => {
      it(\\"smoke-test\\", null);
    });
  });
}"
`;
